--- a/main.css
+++ b/main.css
@@ -667,6 +667,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -988,10 +992,6 @@ video {
   text-align: left;
 }
 
-.text-center {
-  text-align: center;
-}
-
 .text-right {
   text-align: right;
 }
@@ -1155,6 +1155,19 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.active {
+  background-color: rgba(35, 37, 54, 1);
+}
+
+.testimonial-active {
+  display: flex;
+  flex-direction: column;
+}
+
+/* .testimonial__content{
+    @apply hidden;
+} */
+
 .placeholder\:pl-4::-moz-placeholder {
   padding-left: 1rem;
 }
@@ -1167,49 +1180,8 @@ video {
   opacity: 1;
 }
 
-@media (min-width: 480px) {
-  .sm\:hidden {
-    display: none;
-  }
 
-  .sm\:flex-col {
-    flex-direction: column;
-  }
 
-  .sm\:text-center {
-    text-align: center;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-}
-
-@media (min-width: 650px) {
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
-  }
-
-  .md\:text-left {
-    text-align: left;
-  }
-
-  .md\:text-\[56px\] {
-    font-size: 56px;
-  }
-}
-
-@media (min-width: 1400px) {
-  .lg\:hidden {
-    display: none;
-  }
-}
 
 
 
